--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^3.0.1",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-table": "^8.21.3",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.2",
     "react-scroll": "^1.9.3",
     "sweetalert2": "^11.22.5",
@@ -27,6 +30,7 @@
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
