--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm:dev:front\" \"npm:dev:back\"",
+    "dev:front": "vite",
+    "dev:back": "tsx watch src/server.ts",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fastify/cors": "^11.1.0",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
@@ -17,7 +20,11 @@
     "@fortawesome/react-fontawesome": "^3.0.1",
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
+    "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-modal": "^3.16.3",
@@ -28,15 +35,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-modal": "^3.16.3",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^5.0.0",
+    "axios": "^1.12.2",
+    "concurrently": "^9.2.1",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "fastify": "^5.6.0",
     "globals": "^16.3.0",
+    "tsx": "^4.20.5",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^7.1.2"
