--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.15.5",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
