--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "front-consultorio-odontologico",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "concurrently \"npm:dev:front\" \"npm:dev:back\"",
     "dev:front": "vite",
     "dev:back": "tsx watch src/server.ts",
-    "build": "tsc -b && vite build",
+    "build:front": "tsc && vite build",
+    "build:back": "tsc --project tsconfig.server.json",
     "lint": "eslint .",
     "preview": "vite preview"
   },
