--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -12,7 +12,7 @@ COPY . .
 # Assume que você tem um tsconfig.json que compila para a pasta 'dist'
 # E um script no package.json: "build:backend": "tsc --project tsconfig.server.json" (ou similar)
 # Se seu script de build principal já compila o backend, pode usar 'npm run build'
-RUN npm run build
+RUN npm run build:back
 
 # Expõe a porta que o seu servidor Fastify usa
 EXPOSE 8888
