--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,8 @@ services:
   frontend:
     build:
       context: .
-      dockerfile: Dockerfile.frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:80"
     depends_on:
       - backend
-
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile.backend
-    ports:
-      - "8888:8888"
-    env_file:
-      - .env
