--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tailwindcss/vite": "^4.1.12",
     "@tanstack/react-table": "^8.21.3",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.8.2",
