--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
